--- a/index.html
+++ b/index.html
@@ -77,36 +77,37 @@
     </nav>
 
     <!-- Modal -->
-    <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
-      <div class="modal-dialog d-flex align-items-center justify-content-center min-vh-100">
-        <div class="modal-content bg-dark text-white">
-          <div class="modal-header mb-3 pb-3 border-bottom border-secondary">
-            <h5 class="modal-title" id="modalLoginLabel">Iniciar Sesión</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
+  <div class="modal-dialog d-flex align-items-center justify-content-center min-vh-100">
+    <div class="modal-content bg-dark text-white">
+      <div class="modal-header mb-3 pb-3 border-bottom border-secondary">
+        <h5 class="modal-title" id="modalLoginLabel">Iniciar Sesión</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
           </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="Contraseña">
-              </div>
-              <div class="form-check mt-4">
-                <input type="checkbox" class="form-check-input" id="rememberMe">
-                <label class="form-check-label" for="rememberMe">Recuérdame</label>
-              </div>
-            </form>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" placeholder="Contraseña">
           </div>
-          <div class="modal-footer mt-3 pt-3 border-top border-secondary">
-            <button type="button" class="btn btn-secondary">Iniciar Sesión</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <div class="form-check mt-4">
+            <input type="checkbox" class="form-check-input" id="rememberMe">
+            <label class="form-check-label" for="rememberMe">Recuérdame</label>
           </div>
-        </div>
+        </form>
+      </div>
+      <div class="modal-footer mt-3 pt-3 border-top border-secondary">
+        <button type="button" class="btn btn-secondary" id="boton-iniciar-sesion">Iniciar Sesión</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
+  </div>
+</div>
+
   </header>
 
   <br>
@@ -396,6 +397,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-beta2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./js/inicioSession.js"></script>
+  <script src="./js/baseDatos.js"></script>
 </body>
 
 </html>
