--- a/pages/productos.html
+++ b/pages/productos.html
@@ -129,107 +129,10 @@
             </div>
         </div>
 
-        <!-- Product List -->
+        <!-- Lista Productos-->
         <div class="container">
-            <div class="row">
-                <!-- Product 1 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 border-solid">
-                        <img src="../img/b-Beiconeta.jpg" class="card-img-top" alt="Doble Egg">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $380</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto1">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
+            <div class="contenedor-productos" id="contenedorProductos">
 
-                <!-- Product 2 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4">
-                        <img src="../img/b-BigM.jpg" class="card-img-top" alt="doble Cheddar">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $420</p>
-                            <button class="btn bg-dark text-light k btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto2">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 3 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Cabrona.jpg" class="card-img-top" alt="Doble queso">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto3">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 4 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Dios.jpg" class="card-img-top" alt="Big King">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $420</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto4">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 5 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Emmily.jpg" class="card-img-top" alt="Wopper 1.0">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto5">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 6 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Epicarda.jpg" class="card-img-top" alt="Hamburgesa queso">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light" data-bs-toggle="modal" data-bs-target="#modalProducto6">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 7 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Gringa.jpg" class="card-img-top" alt="Hamburgesa queso">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto7">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 8 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/b-Vieja.jpg" class="card-img-top" alt="Hamburgesa queso">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light k btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto8">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 9 -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-4 nvmg2 border-solid">
-                        <img src="../img/Wunder.jpg" class="card-img-top" alt="Hamburgesa queso">
-                        <div class="card-body cardprod text-center">
-                            <p class="card-text text-light precio-destacado">Precio: $390</p>
-                            <button class="btn bg-dark text-light btn-agregar" data-bs-toggle="modal" data-bs-target="#modalProducto9">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -248,34 +151,34 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light" onclick="addToCart('baiconeta', 380)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Modal Producto 2 -->
-        <div class="modal fade" id="modalProducto2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalProducto2Label" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content border custom-modal">
-                    <div class="modal-header card-body">
-                        <h3 class="modal-title fs-5 text-center text-light" id="staticBackdropLabel">Confirmar articulo</h3>
-                        <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body card-body">
-                        <img src="../img/b-BigM.jpg" class="card-img-top mx-auto py-2" alt="Producto 2">
-                        <p class="card-text text-light text-center precio-destacado">Precio: $420</p>
-                    </div>
-                    <div class="modal-footer card-body">
-                        <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
-                        <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
-                        </a>
-                    </div>
-                </div>
+       
+      <!-- Modal Producto 2 -->
+<div class="modal fade" id="modalProducto2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalProducto2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content border custom-modal">
+            <div class="modal-header card-body">
+                <h3 class="modal-title fs-5 text-center text-light" id="staticBackdropLabel">Confirmar artículo</h3>
+                <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body card-body">
+                <img src="../img/b-BigM.jpg" class="card-img-top mx-auto py-2" alt="Producto 2">
+                <p class="card-text text-light text-center precio-destacado">Precio: $420</p>
+            </div>
+            <div class="modal-footer card-body">
+                <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn bg-dark text-light" onclick="addToCart('Big Mc', 420)">Agregar Carrito</button>
             </div>
         </div>
+    </div>
+</div>
+
 
         <!-- Modal Producto 3 -->
         <div class="modal fade" id="modalProducto3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalProducto3Label" aria-hidden="true">
@@ -292,7 +195,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('Cabrona', 390)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -314,7 +217,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('Dios', 420)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -336,7 +239,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('Emmily ', 390)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -358,7 +261,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('Epicarda', 390)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -380,7 +283,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('b-Gringa', 390)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -402,7 +305,7 @@
                     <div class="modal-footer card-body">
                         <button type="button" class="btn w-50 bg-dark text-light" data-bs-dismiss="modal">Cerrar</button>
                         <a href="./carrito.html">
-                            <button type="button" class="btn bg-dark text-light">Agregar Carrito</button>
+                            <button type="button" class="btn bg-dark text-light"  onclick="addToCart('Vieja y confiable', 390)">Agregar Carrito</button>
                         </a>
                     </div>
                 </div>
@@ -494,6 +397,9 @@
         <p class="text-center font-weight-bold text-light m-3">&copy; 2024 Burger ONE. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="../js/carrito.js"></script>
+    <script src="../js/productos.js"></script>
+    <script src="../js/bancoVirtual.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
