--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -22,94 +22,94 @@
 <body class="background">
   <!-- Header Section -->
   <header class="background">
-    <nav class="navbar navbar-expand-lg bg__nav py-auto fixed-top mx-auto py-4">
-      <div class="container-fluid mx-auto">
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <img class="logo logo-mobile d-block d-lg-none" src="../img/icono-nwe03.png" alt="LOGO burger one">
-        <div class="collapse navbar-collapse nav__sombra py-1" id="navbarSupportedContent">
-          <div>
-            <img class="logo d-none d-lg-block" src="../img/icono-nwe03.png" alt="LOGO burger one">
-          </div>
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item text-center marginr">
-              <a class="nav-link active colortxtnav text-light" href="../index.html">INICIO</a>
-            </li>
-            <li class="nav-item text-center marginr">
-              <a class="nav-link active text-light" aria-current="page" href="./productos.html">PRODUCTOS</a>
-            </li>
-            <li class="nav-item text-center marginr">
-              <a class="nav-link active text-light" href="./novedades.html">NOVEDADES</a>
-            </li>
-            <li class="nav-item text-center marginr">
-              <a class="nav-link active text-light" href="./nosotros.html">NOSOTROS</a>
-            </li>
-            <!--Elementos solo mobile-->
-            <li class="nav-item d-none d-lg-block arreglo-letras cursorpointer">
-              <a class="nav-link text-light arreglo-letras fs-6 cursorpointer" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</a>
-            </li>
-            <li class="nav-item text-center d-block d-lg-none marginr">
-              <a class="nav-link text-light arreglo-letras" href="./registrarse.html">Registrarse</a>
-            </li>
-            <li class="nav-item text-center d-block d-lg-none marginr">
-              <a class="nav-link text-light" href="./perfil.html">Perfil</a>
-            </li>
-            <li class="nav-item text-center d-block d-lg-none marginr">
-              <a class="nav-link text-light" href="./carrito.html">Carrito</a>
-            </li>
-          </ul>
-          <!--Elementos-->
-          <ul class="navbar-nav d-flex align-items-center justify-content-between">
-            <li class="nav-item d-none d-lg-block cursorpointer">
-              <a class="nav-link text-light arreglo-letras fs-6 cursorpointer" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
-              <a class="nav-link text-light arreglo-letras fs-6" href="./registrarse.html">Registrarse</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
-              <a class="nav-link text-light" href="./perfil.html"><img class="w-75" src="../img/icono-editar-perfil.png" alt="editar perfil"></a>
-            </li>
-            <li class="nav-item usuario-nav d-none d-lg-block">
-              <a class="nav-link text-light" href="./carrito.html"><img class="w-75" src="../img/icono-carrito-nav.png" alt="carrito de compras"></a>
-            </li>
-          </ul>
+    <nav class="navbar navbar-expand-lg bg__nav py-auto fixed-top py-4">
+        <div class="container-fluid mx-auto">
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <img class="logo logo-mobile d-block d-lg-none" src="../img/icono-nwe03.png" alt="LOGO burger one">
+            <div class="collapse navbar-collapse nav__sombra py-1" id="navbarSupportedContent">
+                <div>
+                    <img class="logo d-none d-lg-block" src="../img/icono-nwe03.png" alt="LOGO burger one">
+                </div>
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item text-center marginr">
+                        <a class="nav-link active colortxtnav text-light" href="../index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item text-center marginr">
+                        <a class="nav-link active text-light" aria-current="page" href="./productos.html">PRODUCTOS</a>
+                    </li>
+                    <li class="nav-item text-center marginr">
+                        <a class="nav-link active text-light" href="./novedades.html">NOVEDADES</a>
+                    </li>
+                    <li class="nav-item text-center marginr">
+                        <a class="nav-link active text-light" href="./nosotros.html">NOSOTROS</a>
+                    </li>
+                    <!-- Elementos solo mobile -->
+                    <li class="nav-item text-center d-block d-lg-none marginr">
+                        <a class="nav-link text-light arreglo-letras cursorpointer" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item text-center d-block d-lg-none marginr">
+                        <a class="nav-link text-light arreglo-letras" href="./registrarse.html">Registrarse</a>
+                    </li>
+                    <li class="nav-item text-center d-block d-lg-none marginr">
+                        <a class="nav-link text-light" href="./perfil.html">Perfil</a>
+                    </li>
+                    <li class="nav-item text-center d-block d-lg-none marginr">
+                        <a class="nav-link text-light" href="./carrito.html">Carrito</a>
+                    </li>
+                </ul>
+                <!-- Elementos -->
+                <ul class="navbar-nav d-flex align-items-center justify-content-between">
+                    <li class="nav-item d-none d-lg-block">
+                        <a class="nav-link text-light arreglo-letras fs-6 cursorpointer" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block" >
+                        <a class="nav-link text-light arreglo-letras fs-6" id="btnRegristrar"  href="./registrarse.html">Registrarse</a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block">
+                        <a class="nav-link text-light" href="./perfil.html"><img class="w-75" src="../img/icono-editar-perfil.png" alt="editar perfil"></a>
+                    </li>
+                    <li class="nav-item usuario-nav d-none d-lg-block">
+                        <a class="nav-link text-light" href="./carrito.html"><img class="w-75" src="../img/icono-carrito-nav.png" alt="carrito de compras"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
     <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
-      <div class="modal-dialog d-flex align-items-center justify-content-center min-vh-100">
-        <div class="modal-content bg-dark text-white p-4">
-          <div class="modal-header mb-3 pb-3 border-bottom border-secondary">
-            <h5 class="modal-title" id="modalLoginLabel">Iniciar Sesión</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="Contraseña">
-              </div>
-              <div class="form-check mt-4">
-                <input type="checkbox" class="form-check-input" id="rememberMe">
-                <label class="form-check-label" for="rememberMe">Recuérdame</label>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer mt-3 pt-3 border-top border-secondary">
-            <button type="button" class="btn btn-secondary">Iniciar Sesión</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          </div>
+        <div class="modal-dialog d-flex align-items-center justify-content-center min-vh-100">
+            <div class="modal-content bg-dark text-white p-4">
+                <div class="modal-header mb-3 pb-3 border-bottom border-secondary">
+                    <h5 class="modal-title" id="modalLoginLabel">Iniciar Sesión</h5>
+                    <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Correo Electrónico</label>
+                            <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="password" placeholder="Contraseña">
+                        </div>
+                        <div class="form-check mt-4">
+                            <input type="checkbox" class="form-check-input" id="rememberMe">
+                            <label class="form-check-label" for="rememberMe">Recuérdame</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer mt-3 pt-3 border-top border-secondary">
+                    <button type="button" class="btn btn-secondary">Iniciar Sesión</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </header>
+</header>
 
   <br><br>
 
@@ -121,40 +121,50 @@
       <p class="titulos">Registrarse</p>
     </div>
 
+
+      <!-- Contenedor de bienvenida -->
+  <div id="contenedorBienvenida" style="display: none;">
+      <h2 id="mensajeBienvenida"></h2>
+  </div>
     <!-- Registration Form -->
-    <div class="container mx-auto text-center">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <p class="saborea text-center text-light bg-dark border p-2">Te lo enviamos a donde estés en menos de 40 minutos sino te devolvemos el dinero <span> (Florida, Uruguay)</span></p>
-          <p class="saborea text-center text-light">Completa el siguiente formulario, estás a un paso...</p>
-          <form>
-            <div class="form-group mb-3">
-              <input type="text" class="form-control mx-auto" id="nombre" placeholder="Ingrese su Nombre" required>
-            </div>
-            <div class="form-group mb-3">
-              <input type="text" class="form-control mx-auto" id="apellido" placeholder="Ingrese su Apellido" required>
-            </div>
-            <div class="form-group mb-3">
-              <input type="email" class="form-control mx-auto" id="correo" placeholder="Ingrese su Correo electrónico" required>
-            </div>
-            <div class="form-group arrglotam mb-3">
-              <input type="password" class="form-control mx-auto" id="contraseña" placeholder="Ingrese su contraseña">
-            </div>
-            <div class="form-group mb-3">
-              <input type="text" class="form-control mx-auto" id="ciudad" placeholder="Ingrese su ciudad">
-            </div>
-            <div class="form-group mb-3">
-              <input type="text" class="form-control mx-auto" id="direccion" placeholder="Ingrese su dirección">
-            </div>
-            <div class="form-group mb-3">
-              <input type="tel" class="form-control mx-auto" id="telefono" placeholder="Ingrese su número de teléfono">
-            </div>
-            <button type="submit" class="btn bg-dark text-light mx-auto mb-4 mt-4">Ir al perfil</button>
-            <button type="submit" class="btn bg-dark text-light mx-auto">Guardar cambios</button>
-          </form>
-        </div>
+    <div class="container mx-auto text-center" id="contenedorFormulario">
+      <div class="row justify-content-center" id="registroModal">
+          <div class="col-md-6">
+              <p class="saborea text-center text-light bg-dark border p-2 text-light">Te lo enviamos a donde estés en menos de 40 minutos sino te devolvemos el dinero <span>(Florida, Uruguay)</span></p>
+              <p class="saborea text-center text-light">Completa el siguiente formulario, estás a un paso...</p>
+              <form id="formularioRegistro">
+                  <div class="form-group mb-3">
+                      <input type="text" class="form-control mx-auto" id="nombre" placeholder="Ingrese su Nombre" required>
+                  </div>
+                  <div class="form-group mb-3">
+                      <input type="text" class="form-control mx-auto" id="apellido" placeholder="Ingrese su Apellido" required>
+                  </div>
+                  <div class="form-group mb-3">
+                      <input type="email" class="form-control mx-auto" id="correo" placeholder="Ingrese su Correo electrónico" required>
+                  </div>
+                  <div class="form-group arrglotam mb-3">
+                      <input type="password" class="form-control mx-auto" id="contraseña" placeholder="Ingrese su contraseña" required>
+                  </div>
+                  <div class="form-group mb-3">
+                      <input type="text" class="form-control mx-auto" id="ciudad" placeholder="Ingrese su ciudad" required>
+                  </div>
+                  <div class="form-group mb-3">
+                      <input type="text" class="form-control mx-auto" id="direccion" placeholder="Ingrese su dirección" required>
+                  </div>
+                  <div class="form-group mb-3">
+                      <input type="tel" class="form-control mx-auto" id="telefono" placeholder="Ingrese su número de teléfono" required>
+                  </div>
+                  <button type="submit" id="botonRegistrar" class="btn bg-dark text-light mx-auto mb-4 mt-4">Registrarse</button>
+                  <button type="reset" class="btn bg-dark text-light mx-auto">Cancelar</button>
+              </form>
+          </div>
+          <div class="col-md-6" id="contenedorBienvenida" style="display:none;">
+              <h2 id="mensajeBienvenida" class="text-center text-light f-2"></h2>
+          </div>
       </div>
-    </div>
+  </div>
+
+
 
     <!-- Information Section -->
     <section class="flex-container">
@@ -223,6 +233,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="../js/registrarse.js"></script>
 </body>
 
 </html>
